noted under maintanance

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                 <div class="container">
                     <small class="slide-animated one">Luxury Resort Experience</small>
                     <h3 class="slide-animated two">A unique Experience<br>where to stay</h3>
+                    <small > Website Under Maintanance</small>
                     <div class="row justify-content-center slide-animated three">
                         <div class="col-xl-10">
                             <div class="row g-0 booking_form">
