update link foto villa & review google

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                     <a href="room-details-junior.html" class="box_cat_rooms">
                         <figure>
-                            <div class="background-image" data-background="url(img/rooms/villa_Junior.jpg)"></div>
+                            <div class="background-image" data-background="url(img/rooms/villa_junior.jpg)"></div>
                             <div class="info">
                                 <small>From IDR.7.000.000/night</small>
                                 <h3>Villa Aqua Junior</h3>
@@ -274,7 +274,7 @@
                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
                     <a href="room-details-president.html" class="box_cat_rooms">
                         <figure>
-                            <div class="background-image" data-background="url(img/rooms/villa_President.jpg)"></div>
+                            <div class="background-image" data-background="url(img/rooms/villa_president.jpg)"></div>
                             <div class="info">
                                 <small>From IDR.10.000.000/night</small>
                                 <h3>Villa Aqua President</h3>
@@ -406,16 +406,9 @@
                             </div>
                             <div class="    carousel_testimonials owl-carousel owl-theme nav-dots-orizontal">
                                 <div>
-                                    <div class="box_overlay">
-                                        <div class="pic">
-                                            <figure><img src="img/resto_1.jpg" alt="" class="img-circle">
-                                            </figure>
-                                            <h4>Roberta<small>12 Oct</small></h4>
-                                        </div>
-                                        <div class="comment">
-                                            "Mea ad postea meliore fuisset. Timeam repudiare id eum, ex paulo dictas elaboraret sed, mel cu unum nostrud."
-                                        </div>
-                                    </div>
+                                    <div class="jarallax-img kenburns-2">
+                                        <script defer async src='https://cdn.trustindex.io/loader.js?8f4fe3d27e4c124d940673fce10'></script>
+                                     </div>
                                     <!-- End box_overlay -->
                                 </div>
                                 <div>
