update detail index & other's villa

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="col-6">
                     <nav>
                         <ul>
-                            <li><a href="#booking_section" class="btn_1 btn_scrollto">Book Now</a></li>
+                            <li><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank" class="btn_1 btn_scrollto">Reservation</a></li>
                             <li>
                                <div class="hamburger_2 open_close_nav_panel">
                                     <div class="hamburger__box">
@@ -84,8 +84,7 @@
                         <ul class="level-2">
                             <li class="back"><a href="#0">Back</a></li>
                             <li><a href="room-list-1.html">Our Services</a></li>
-                            <li><a href="room-list-2.html">Azura Bistro Resto</a></li>
-                            <li><a href="room-list-3.html">Ocean House</a></li>
+                            <li><a href="restaurant.html">Restaurant</a></li>
                             <li><a href="room-details.html">Main Pool</a></li>
                             <li><a href="room-details-booking.html">Spa</a></li>
                         </ul>
@@ -128,7 +127,7 @@
                     </li> -->
                 </ul>
                 <div class="panel_footer">
-                    <div class="phone_element"><a href="tel://423424234"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></div>
+                    <div class="phone_element"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></div>
                 </div>
                 <!-- /panel_footer -->
             </nav>
@@ -347,7 +346,18 @@
                         <div class="title">
                             <small>Local Amenities</small>
                             <h3>Restaurants</h3>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                            <p>
+                                We have 2 restaurants, of which Azura Bistro Resto is located close to the garden
+                                Open for breakfast and dinner,
+                               Azura is a beach-style restaurant that hosts guests
+                                can enjoy various themed buffets
+                                with Asian and Western cuisine, and watching movies
+                                with a barbeque in the evening in the garden. </p>
+                            <p> And Oceanhouse
+                                which is located close to the pier
+                                open for lunch and dinner,
+                                Oceanhouse is an open-air restaurant where guests can enjoy a 
+                                variety of Chinese and seafood-themed buffets </p>
                             <p><a href="restaurant.html" class="btn_1 mt-1 outline">Read more</a></p>
                         </div>
                     </div>
@@ -365,7 +375,13 @@
                         <div class="title">
                             <small>Local Amenities</small>
                             <h3>Kind Store</h3>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                            <p>Kindstore showcases the beauty of Bintan Island with
+                                a curated collection of clothing, gifts and art
+                                in particular. create a bright display of clothing, jewelry,
+                                our quality bags, shoes and works of art such as paintings,
+                                statues, and typical Bintan batik which are suitable for gifts or
+                                as a memory of your stay experience
+                                fun at One Of A Kind Resort.</p>
                             <p><a href="about.html" class="btn_1 mt-1 outline">Read more</a></p>
                         </div>
                     </div>
@@ -383,7 +399,12 @@
                         <div class="title">
                             <small>Local Amenities</small>
                             <h3>Main Pool</h3>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                            <p>Our adults only infinity pool is
+                                the perfect place to enjoy the tropical sunshine
+                                and relax with a cold beer, cocktail or mocktail.
+                                offering a sundeck, pool towels and life jackets if available,
+                                Infinity Pool has a beautiful view of the beach
+                                white with open sea.</p>
                             <p><a href="about.html" class="btn_1 mt-1 outline">Read more</a></p>
                         </div>
                     </div>
@@ -404,9 +425,9 @@
                                 <small class="mb-1">Testimonials</small>
                                 <h2>What Our Guest Says</h2>
                             </div>
-                            <div class="    carousel_testimonials owl-carousel owl-theme nav-dots-orizontal">
+                            <div class="carousel_testimonials owl-carousel ">
                                 <div>
-                                    <div class="jarallax-img kenburns-2">
+                                    <div class="jarallax-img">
                                         <script defer async src='https://cdn.trustindex.io/loader.js?8f4fe3d27e4c124d940673fce10'></script>
                                      </div>
                                     <!-- End box_overlay -->
@@ -501,8 +522,8 @@
                             <small>One Of A Kind Resort</small>
                             <h2>Check Availability</h2>
                         </div>
-                        <p>Mea nibh meis philosophia eu. Duis legimus efficiantur ea sea. Id placerat tacimates definitionem sea, prima quidam vim no. Duo nobis persecuti cu. </p>
-                        <p class="phone_element no_borders"><a href="tel://423424234"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></p>
+                        <p>To order and ask about room availability, you can book directly on the side. </p>
+                        <p class="phone_element no_borders"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></p>
                     </div>
                 </div>
                 <div class="col-xl-7">
@@ -516,10 +537,10 @@
                                     <div class="custom_select">
                                         <select class="wide">
                                             <option>Select Room</option>
-                                            <option>Villa Isla</option>
-                                            <option>Villa Aqua Executive</option>
-                                            <option>Villa Aqua Junior</option>
-                                            <option>Villa Aqua President</option>
+                                            <option id="isla">Villa Isla</option>
+                                            <option id="exce">Villa Aqua Executive</option>
+                                            <option id="junior">Villa Aqua Junior</option>
+                                            <option id="president">Villa Aqua President</option>
                                         </select>
                                     </div>
                                 </div>
@@ -544,7 +565,13 @@
                             </div>
                         </div>
                         <!-- / row -->
-                        <p class="text-end mt-4"><a href="#0" class="btn_1 outline">Book Now</a></p>
+                        <script>
+                            function tampilkan(){
+                                var x = document.getElementById(date_booking).value;
+                                documen
+                            }
+                        </script>
+                        <p class="text-end mt-4"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank" class="btn_1 outline">Reservation</a></p>
                     </div>
                 </div>
                 <!-- /col -->
@@ -568,7 +595,7 @@
                     <ul>
                         <li>Jl.Trikora 3 Malang Rapat<br>Bintan - Kepri<br><br></li>
                         <li><strong><a href="#0">info@Oneofakindbintan.com</a></strong></li>
-                        <li><strong><a href="#0">+62 823 1309 9999</a></strong></li>
+                        <li><strong><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" class="_blank">+62 823 1309 9999</a></strong></li>
                     </ul>
                     <div class="social">
                         <ul>
@@ -613,7 +640,7 @@
         <!--/container-->
         <div class="copy">
             <div class="container">
-                © One Of A Kind Resort - by <a href="#">AP-Developer</a>
+                Copyright © 2024 All Rights reserved <a href="https://oneofakindresortbintan.com/">One Of A Kind Resort</a>
             </div>
         </div>
     </footer>
