--- a/room-details-junior.html
+++ b/room-details-junior.html
@@ -48,7 +48,7 @@
                 <div class="col-6">
                     <nav class="second_nav">
                         <ul>
-                             <li><a href="#booking_section" class="btn_1 btn_scrollto">Book Now</a></li>
+                             <li><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank" class="btn_1 btn_scrollto">Reservation</a></li>
                             <li>
                                <div class="hamburger_2 open_close_nav_panel">
                                     <div class="hamburger__box">
@@ -73,10 +73,10 @@
                     <li class="parent"><a href="#0">Our Villa</a>
                         <ul class="level-2">
                             <li class="back"><a href="#0">Back</a></li>
-                            <li><a href="room-list-1.html">Villa Isla</a></li>
-                            <li><a href="room-list-2.html">Villa Aqua Executive</a></li>
-                            <li><a href="room-list-3.html">Villa Aqua Junior</a></li>
-                            <li><a href="room-details.html">Villa Aqua President</a></li>
+                            <li><a href="room-details-isla.html">Villa Isla</a></li>
+                            <li><a href="room-details-execu.html">Villa Aqua Executive</a></li>
+                            <li><a href="room-details-junior.html">Villa Aqua Junior</a></li>
+                            <li><a href="room-details-president.html">Villa Aqua President</a></li>
                             <!-- <li><a href="room-details-booking.html">Working Booking Request</a></li> -->
                         </ul>
                     </li>
@@ -84,8 +84,7 @@
                         <ul class="level-2">
                             <li class="back"><a href="#0">Back</a></li>
                             <li><a href="room-list-1.html">Our Services</a></li>
-                            <li><a href="room-list-2.html">Azura Bistro Resto</a></li>
-                            <li><a href="room-list-3.html">Ocean House</a></li>
+                            <li><a href="restaurant.html">Restaurant</a></li>
                             <li><a href="room-details.html">Main Pool</a></li>
                             <li><a href="room-details-booking.html">Spa</a></li>
                         </ul>
@@ -113,7 +112,7 @@
                     </li> -->
                 </ul>
                 <div class="panel_footer">
-                    <div class="phone_element"><a href="tel://423424234"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></div>
+                    <div class="phone_element"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></div>
                 </div>
                 <!-- /panel_footer -->
             </nav>
@@ -155,25 +154,28 @@
                             <small>Villa Aqua Junior</small>
                             <h2>Modern at Sea</h2>
                         </div>
-                        <p>Villa Aqua Junior is
+                        <p>Is one of the villa types One of A Kind Resorts - @Trikora Beach bintan with a sea
+                            view suitable that you can enjoy in the afternoon with your family or special someone.
                         </p>
-                        <p>Second Floor by Design for Main Rooms with King Bed and large Bathroom inside the room, this have safety box, and freezer also 
-                            direct view for garden. 
+                        <p> 
                         </p>
                     </div>
                     <div class="col-lg-6">
                         <div class="room_facilities_list">
                             <ul data-cues="slideInLeft">
                                 <li><i class="icon-hotel-double_bed_2"></i> King Size Bed</li>
-                                <li><i class="icon-hotel-safety_box"></i> Safety Box</li>
-                                <li><i class="icon-hotel-patio"></i>Balcony</li>
-                                <li><i class="icon-hotel-tv"></i> 32 Inch TV</li>
-                                <li><i class="icon-hotel-bottle"></i> Welcome Bottle</li>
-                                <li><i class="icon-hotel-wifi"></i> Wifi access</li>
-                                <li><i class="icon-hotel-hairdryer"></i> Air Dryer</li>
-                                <li><i class="icon-hotel-condition"></i> Air Condition</li>
-                                <li><i class="icon-hotel-loundry"></i>Loundry Service</li>
-                                <li><i class="customicon-3-guests"></i>max 3 People</li>
+                                <li><i class="icon-hotel-double_bed_2"></i> Extra Sofa Bed</li>
+                                <li><i class="icon-hotel-swimming_pool"></i> Private Plunge Pool</li>
+                                <li><i class="icon-hotel-double_bed_2"></i> Dining Area at Rooftop</li>
+                                <li><i class="icon-hotel-coffee"></i> Coffee / Tea Maker</li>
+                                <li><i class="icon-hotel-double_bed_2"></i> Mini Bar</li>
+                                <li><i class="icon-hotel-double_bed_2"></i> Sunbeds at Terrace</li>
+                                <li><i class="icon-hotel-double_bed_2"></i> Automatic Closet</li>
+                                <li><i class="icon-hotel-bath"></i> Bathtub</li>
+                                <li><i class="icon-hotel-tv"></i> Flat Screen TV</li>
+                                <li><i class="icon-hotel-wifi"></i> Free Wi-fi </li>
+                                <li><i class="icon-hotel-double_bed_2"></i> Paddle Boats </li>
+                                <li><i class="icon-hotel-double_bed_2"></i> Stairs Leading to the Sea </li>
                             </ul>
                         </div>
                     </div>
@@ -207,137 +209,18 @@
                      </div>
                 </div>
                 <div class="text-center mt-5">
-                    <a class="btn_1 outline" data-fslightbox="gallery_1" data-type="image" href="img/rooms/isla_2.jpg">FullScreen Gallery</a>
-                    <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/opt_1.jpg"></a>
-                    <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/opt_4.jpg"></a>
-                    <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/opt_6.jpg"></a>
+                    <a class="btn_1 outline" data-fslightbox="gallery_1" data-type="image" href="img/rooms/detail_junior_1.jpg">FullScreen Gallery</a>
+                    <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/detail_junior_2.jpg"></a>
+                    <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/detail_junior_3.jpg"></a>
+                    <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/detail_junior_4.jpg"></a>
+                    <a data-fslightbox="gallery_1" data-type="image" href="img/rooms/detail_junior_5.jpg"></a>
                 </div>
             </div>
         </div>
         <!-- /bg_white -->
 
         <!-- API Comment & Review -->
-        <div class="container margin_120_95" id="reviews">
-            <div class="row justify-content-between">
-                <div class="col-lg-4 order-lg-2 fixed_title reviews_sum_details">
-                    <div class="title">
-                        <small>Paradise Hotel</small>
-                        <h2>Reviews</h2>
-                    </div>
-                    <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus.</p>
-                    <h6>Comfort</h6>
-                    <div class="row mb-2">
-                        <div class="col-xl-10 col-lg-9 col-10">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-2"><strong>9.0</strong></div>
-                    </div>
-                    <!-- /row -->
-                    <h6>Facilities</h6>
-                    <div class="row mb-2">
-                        <div class="col-xl-10 col-lg-9 col-10">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-2"><strong>9.5</strong></div>
-                    </div>
-                    <!-- /row -->
-                    <h6>Location</h6>
-                    <div class="row mb-2">
-                        <div class="col-xl-10 col-lg-9 col-10">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-2"><strong>6.0</strong></div>
-                    </div>
-                    <!-- /row -->
-                    <h6>Price</h6>
-                    <div class="row mb-2">
-                        <div class="col-xl-10 col-lg-9 col-10">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-2 col-lg-3 col-2"><strong>6.0</strong></div>
-                    </div>
-                    <!-- /row -->
-                </div>
-                <div class="col-lg-7 order-lg-1">
-                    <div class="review_card">
-                        <div class="row">
-                            <div class="col-md-2 user_info">
-                                <figure><img src="img/avatar4.jpg" alt=""></figure>
-                                <h5>Lukas</h5>
-                            </div>
-                            <div class="col-md-10 review_content">
-                                <div class="clearfix mb-3">
-                                    <span class="rating">8.5<small>/10</small> <strong>Rating average</strong></span>
-                                    <em>Published 54 minutes ago</em>
-                                </div>
-                                <h4>"Great Location!!"</h4>
-                                <p>Eos tollit ancillae ea, lorem consulatu qui ne, eu eros eirmod scaevola sea. Et nec tantas accusamus salutatus, sit commodo veritus te, erat legere fabulas has ut. Rebum laudem cum ea, ius essent fuisset ut. Viderer petentium cu his. Tollit molestie suscipiantur his et.</p>
-                            </div>
-                        </div>
-                        <!-- /row -->
-                    </div>
-                    <!-- /review_card -->
-                    <div class="review_card">
-                        <div class="row">
-                            <div class="col-md-2 user_info">
-                                <figure><img src="img/avatar6.jpg" alt=""></figure>
-                                <h5>Lukas</h5>
-                            </div>
-                            <div class="col-md-10 review_content">
-                                <div class="clearfix mb-3">
-                                    <span class="rating">8.5<small>/10</small> <strong>Rating average</strong></span>
-                                    <em>Published 10 Oct. 2022</em>
-                                </div>
-                                <h4>"Awesome Experience"</h4>
-                                <p>Eos tollit ancillae ea, lorem consulatu qui ne, eu eros eirmod scaevola sea. Et nec tantas accusamus salutatus, sit commodo veritus te, erat legere fabulas has ut. Rebum laudem cum ea, ius essent fuisset ut. Viderer petentium cu his. Tollit molestie suscipiantur his et.</p>
-                            </div>
-                        </div>
-                        <!-- /row -->
-                    </div>
-                    <!-- /review_card -->
-                    <div class="review_card">
-                        <div class="row">
-                            <div class="col-md-2 user_info">
-                                <figure><img src="img/avatar1.jpg" alt=""></figure>
-                                <h5>Marika</h5>
-                            </div>
-                            <div class="col-md-10 review_content">
-                                <div class="clearfix mb-3">
-                                    <span class="rating">9.0<small>/10</small> <strong>Rating average</strong></span>
-                                    <em>Published 11 Oct. 2022</em>
-                                </div>
-                                <h4>"Really great dinner!!"</h4>
-                                <p>Eos tollit ancillae ea, lorem consulatu qui ne, eu eros eirmod scaevola sea. Et nec tantas accusamus salutatus, sit commodo veritus te, erat legere fabulas has ut. Rebum laudem cum ea, ius essent fuisset ut. Viderer petentium cu his. Tollit molestie suscipiantur his et.</p>
-                            </div>
-                        </div>
-                        <!-- /row -->
-                        <div class="row reply">
-                            <div class="col-md-2 user_info">
-                                <figure><img src="img/avatar.jpg" alt=""></figure>
-                            </div>
-                            <div class="col-md-10">
-                                <div class="review_content">
-                                    <strong>Reply from Admin</strong>
-                                    <em>Published 3 minutes ago</em>
-                                    <p><br>Hi Monika,<br><br>Eos tollit ancillae ea, lorem consulatu qui ne, eu eros eirmod scaevola sea. Et nec tantas accusamus salutatus, sit commodo veritus te, erat legere fabulas has ut. Rebum laudem cum ea, ius essent fuisset ut. Viderer petentium cu his. Tollit molestie suscipiantur his et.<br><br>Thanks</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /reply -->
-                    </div>
-                    <!-- /review_card -->
-                    <p class="text-end"><a href="#0" class="btn_1">Leave a review</a></p>
-                </div>
-            </div>
-        </div>
+        
         <!-- /reviews -->
         <!-- Others Villa -->
         <div class="bg_white">
@@ -349,7 +232,7 @@
                     </div>
                     <div class="row" data-cues="slideInUp" data-delay="800">
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                            <a href="#" class="box_cat_rooms">
+                            <a href="room-details-isla.html" class="box_cat_rooms">
                                 <figure>
                                     <div class="background-image" data-background="url(img/rooms/villa_isla.jpg)"></div>
                                     <div class="info">
@@ -361,7 +244,7 @@
                             </a>
                         </div>
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                            <a href="room-list-1.html" class="box_cat_rooms">
+                            <a href="room-details-execu.html" class="box_cat_rooms">
                                 <figure>
                                     <div class="background-image" data-background="url(img/rooms/villa_execu.jpg)"></div>
                                     <div class="info">
@@ -373,7 +256,7 @@
                             </a>
                         </div>
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                            <a href="room-list-1.html" class="box_cat_rooms">
+                            <a href="room-details-president.html" class="box_cat_rooms">
                                 <figure>
                                     <div class="background-image" data-background="url(img/rooms/villa_president.jpg)"></div>
                                     <div class="info">
@@ -400,8 +283,8 @@
                             <small>One Of A Kind Resort</small>
                             <h2>Check Availability</h2>
                         </div>
-                        <p>Mea nibh meis philosophia eu. Duis legimus efficiantur ea sea. Id placerat tacimates definitionem sea, prima quidam vim no. Duo nobis persecuti cu. </p>
-                        <p class="phone_element no_borders"><a href="tel://423424234"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></p>
+                        <p>To order and ask about room availability, you can book directly on the side. </p>
+                        <p class="phone_element no_borders"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></p>
                     </div>
                 </div>
                 <div class="col-xl-7">
@@ -443,7 +326,7 @@
                             </div>
                         </div>
                         <!-- / row -->
-                        <p class="text-end mt-4"><a href="#0" class="btn_1 outline">Book Now</a></p>
+                        <p class="text-end mt-4"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank" class="btn_1 outline">Reservation</a></p>
                     </div>
                 </div>
                 <!-- /col -->
@@ -465,7 +348,7 @@
                     <ul>
                         <li>Jl.Trikora 3 Malang Rapat<br>Bintan - Kepri<br><br></li>
                         <li><strong><a href="#0">info@Oneofakindbintan.com</a></strong></li>
-                        <li><strong><a href="#0">+62 823 1309 9999</a></strong></li>
+                        <li><strong><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank">+62 823 1309 9999</a></strong></li>
                     </ul>
                     <div class="social">
                         <ul>
