update favicon code

--- a/room-details-isla.html
+++ b/room-details-isla.html
@@ -8,12 +8,12 @@
     <meta name="author" content="Ansonika">
     <title>One Of A Kind Resort</title>
     
-    <!-- Favicons-->
-    <link rel="shortcut icon" href="img/favicon_logo.png" type="image/x-icon">
-    <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
+<!-- Favicons-->
+<link rel="icon" type="image/png" sizes="16x16"  href="/img/favicon-16x16.png">
+<link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-114x114.png">
 
     <!-- GOOGLE WEB FONT-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -382,13 +382,13 @@
                             </a>
                         </div>
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                            <a href="room-details-execu.html" class="box_cat_rooms">
+                            <a href="room-details-junior.html" class="box_cat_rooms">
                                 <figure>
                                     <div class="background-image" data-background="url(img/rooms/villa_junior.jpg)"></div>
                                     <div class="info">
                                         <small>From IDR.7.000.000/night</small>
                                         <h3>Villa Aqua Junior</h3>
-                                        <span href="room-details-execu.html">Read more</span>
+                                        <span href="room-details-junior.html">Read more</span>
                                     </div>
                                 </figure>
                             </a>
