--- a/room-details-president.html
+++ b/room-details-president.html
@@ -8,12 +8,12 @@
     <meta name="author" content="Ansonika">
     <title>One Of A Kind Resort</title>
     
-    <!-- Favicons-->
-    <link rel="shortcut icon" href="img/favicon_logo.png" type="image/x-icon">
-    <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
+<!-- Favicons-->
+<link rel="icon" type="image/png" sizes="16x16"  href="/img/favicon-16x16.png">
+<link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-114x114.png">
 
     <!-- GOOGLE WEB FONT-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -112,7 +112,7 @@
                     </li> -->
                 </ul>
                 <div class="panel_footer">
-                    <div class="phone_element"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></div>
+                    <div class="phone_element"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></div>
                 </div>
                 <!-- /panel_footer -->
             </nav>
