--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="eng">
 
 <head>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Ansonika">
+    <meta name="description" content="Find your perfect getaway at One Of A Kind Resort-Bintan Explore our collection of luxury & budget hotels & resorts worldwide. Book online & save with exclusive deals!">
+    <meta name="author" content="One Of A Kind Resort">
     <title>One Of A Kind Resort</title>
     
     <!-- Favicons-->
@@ -44,13 +44,13 @@
         <div class="container">
             <div class="row align-items-center">
                  <div class="col-6">
-                    <a href="index.html" class="logo_normal"><img src="img/logo_ooak.png" width="135" height="45" alt=""></a>
-                    <a href="index.html" class="logo_sticky"><img src="img/logo_sticky_ooak.png" width="135" height="45" alt=""></a>
+                    <a href="index.html" class="logo_normal"><img src="img/logo_ooak.png" width="135" height="45" alt="Logo One Of A Kind Resort Bintan"></a>
+                    <a href="index.html" class="logo_sticky"><img src="img/logo_sticky_ooak.png" width="135" height="45" alt="Logo One Of A Kind Resort Bintan"></a>
                 </div>
                 <div class="col-6">
                     <nav>
                         <ul>
-                            <li><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank" class="btn_1 btn_scrollto">Reservation</a></li>
+                            <li><a href="https://wa.me/+6282313099999" class="btn_1 btn_scrollto">Reservation</a></li>
                             <li>
                                <div class="hamburger_2 open_close_nav_panel">
                                     <div class="hamburger__box">
@@ -67,7 +67,7 @@
 
     <div class="nav_panel">
         <a href="#" class="closebt open_close_nav_panel"><i class="bi bi-x"></i></a>
-        <div class="logo_panel"><img src="img/logo_sticky_ooak.png" width="135" height="45" alt=""></div>
+        <div class="logo_panel"><img src="img/logo_sticky_ooak.png" width="135" height="45" alt="Logo One Of A Kind Resort Bintan"></div>
         <div class="sidebar-navigation">
             <nav>
                 <ul class="level-1">
@@ -129,7 +129,7 @@
                     </li> -->
                 </ul>
                 <div class="panel_footer">
-                    <div class="phone_element"><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" target="_blank"><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></div>
+                    <div class="phone_element"><a href="https://wa.me/+6282313099999" ><i class="bi bi-telephone"></i><span><em>Info and bookings</em>+62 823 1309 9999</span></a></div>
                 </div>
                 <!-- /panel_footer -->
             </nav>
@@ -192,15 +192,15 @@
                 <div class="row justify-content-between flex-lg-row-reverse align-items-center">
                     <div class="col-lg-5">
                         <div class="parallax_wrapper">
-                            <img src="img/home_2ooak.jpg" alt="" class="img-fluid rounded-img">
-                            <div data-cue="slideInUp" class="img_over"><span data-jarallax-element="-30"><img src="img/home_1ooak.jpg" alt="" class="rounded-img"></span></div>
+                            <img src="img/home_2ooak.jpg" alt="a nother view villa isla" class="img-fluid rounded-img">
+                            <div data-cue="slideInUp" class="img_over"><span data-jarallax-element="-30"><img src="img/home_1ooak.jpg" alt="drone view villa Aqua" class="rounded-img"></span></div>
                         </div>
                     </div>
                     <div class="col-lg-5">
                         <div class="intro">
                             <div class="title">
                                 <small>About us</small>
-                                <h2>The One Of A Kind Resort at Bintan</h2>
+                                <h1>The One Of A Kind Resort at Bintan</h1>
                             </div>
                             <p class="lead">Nature and Modern Concept Resort</p>
                             <p>We have 2 concept Villa's as like as Triangel having garden view with 2 floors and Qubes Concept has a sea view and BBQ on Rooftop. And all Villa's Has Private Pool</p>
@@ -340,7 +340,7 @@
                     <div class="col-lg-6">
                         <div class="pinned-image rounded_container pinned-image--small mb-4">
                             <div class="pinned-image__container">
-                                <img src="img/resto_1.jpg" alt="">
+                                <img src="img/resto_1.jpg" alt="Azura Bistro Resto have vie garden">
                             </div>
                         </div>
                     </div>
@@ -369,7 +369,7 @@
                     <div class="col-lg-6 order-lg-2">
                         <div class="pinned-image rounded_container pinned-image--small mb-4">
                             <div class="pinned-image__container">
-                                <img src="img/kindstore_2.jpg" alt="">
+                                <img src="img/kindstore_2.jpg" alt="Store at One Of A Kind, you can find souvenir or gift here">
                             </div>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                     <div class="col-lg-6">
                         <div class="pinned-image rounded_container pinned-image--small mb-4">
                             <div class="pinned-image__container">
-                                <img src="img/mainpool_4.jpg" alt="">
+                                <img src="img/mainpool_4.jpg" alt="Infinity Pool have beautyview straigh to the sea">
                             </div>
                         </div>
                     </div>
@@ -418,7 +418,7 @@
         <!-- /bg_white -->
 
         <div class="parallax_section_1 jarallax" data-jarallax data-speed="0.2">
-            <img class="jarallax-img kenburns-2" src="img/resto_1.jpg" alt="">
+            <img class="jarallax-img kenburns-2" src="img/resto_1.jpg" alt="Review our guest for improve service and quality Resort">
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
                     <div class="row justify-content-center">
@@ -432,32 +432,6 @@
                                     <div class="jarallax-img">
                                         <script defer async src='https://cdn.trustindex.io/loader.js?8f4fe3d27e4c124d940673fce10'></script>
                                      </div>
-                                    <!-- End box_overlay -->
-                                </div>
-                                <div>
-                                    <div class="box_overlay">
-                                        <div class="pic">
-                                            <figure><img src="img/kindstore_2.jpg" alt="" class="img-circle">
-                                            </figure>
-                                            <h4>Roberta<small>2 Nov</small></h4>
-                                        </div>
-                                        <div class="comment">
-                                            "Mea ad postea meliore fuisset. Timeam repudiare id eum, ex paulo dictas elaboraret sed, mel cu unum nostrud."
-                                        </div>
-                                    </div>
-                                    <!-- End box_overlay -->
-                                </div>
-                                <div>
-                                    <div class="box_overlay">
-                                        <div class="pic">
-                                            <figure><img src="img/kindstore_2.jpg" alt="" class="img-circle">
-                                            </figure>
-                                            <h4>Roberta<small>3 Dec</small></h4>
-                                        </div>
-                                        <div class="comment">
-                                            "Mea ad postea meliore fuisset. Timeam repudiare id eum, ex paulo dictas elaboraret sed, mel cu unum nostrud."
-                                        </div>
-                                    </div>
                                     <!-- End box_overlay -->
                                 </div>
                             </div>
@@ -479,7 +453,7 @@
                 <div class="row justify-content-center home">
                     <div class="item col-xl-4 col-lg-6">
                         <a href="news-post.html" class="box_contents" data-cue="slideInUp" data-delay="300">
-                            <figure><img src="img/ramadhan.jpg" alt="" class="img-fluid"><em>12 March - 9 Apr</em></figure>
+                            <figure><img src="img/ramadhan.jpg" alt="Special Ramadhan Iftar Package" class="img-fluid"><em>12 March - 9 Apr</em></figure>
                             <div class="wrapper">
                                 <small>Ramadhan<span></span></small>
                                 <h2>Ramadhan Iftar Package</h2>
@@ -489,7 +463,7 @@
                     </div>
                     <div class="item col-xl-4 col-lg-6">
                         <a href="news-post.html" class="box_contents" data-cue="slideInUp" data-delay="400">
-                            <figure><img src="img/call&deal.jpg" alt="" class="img-fluid"><em>March</em></figure>
+                            <figure><img src="img/call&deal.jpg" alt="Promo Call & Deal for this Month" class="img-fluid"><em>March</em></figure>
                             <div class="wrapper">
                                 <small>Hot Deal<span></span></small>
                                 <h2>Call & Deal Promo</h2>
@@ -499,7 +473,7 @@
                     </div>
                     <div class="item col-xl-4 col-lg-6">
                         <a href="news-post.html" class="box_contents" data-cue="slideInUp" data-delay="500">
-                            <figure><img src="img/F&Bpromo.jpg" alt="" class="img-fluid"><em>March - Mei</em></figure>
+                            <figure><img src="img/F&Bpromo.jpg" alt="F&B Promo of the month Package" class="img-fluid"><em>March - Mei</em></figure>
                             <div class="wrapper">
                                 <small>F&B Promo<span></span></small>
                                 <h2>Of The Month Package</h2>
