--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     
     <!-- Favicons-->
     <link rel="icon" type="image/png" sizes="16x16"  href="/img/favicon-16x16.png">
-    <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-114x114.png">
+    <link defer async rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57.png">
+    <link defer async rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+    <link defer async rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+    <link defer async rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-114x114.png">
 
     <!-- GOOGLE WEB FONT-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link defer async rel="preconnect" href="https://fonts.googleapis.com">
+    <link defer async rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link defer async href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- BASE CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-	<link href="css/vendors.min.css" rel="stylesheet">
+    <link defer async href="css/bootstrap.min.css" rel="stylesheet">
+    <link defer async href="css/style.css" rel="stylesheet">
+	<link defer async href="css/vendors.min.css" rel="stylesheet">
 
     <!-- YOUR CUSTOM CSS -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link defer async href="css/custom.css" rel="stylesheet">
     
 </head>
 
