--- a/index.html
+++ b/index.html
@@ -85,24 +85,24 @@
                     <li class="parent"><a href="#0">Services & Facilities</a>
                         <ul class="level-2">
                             <li class="back"><a href="#0">Back</a></li>
-                            <li><a href="room-list-1.html">Our Services</a></li>
+                            <li><a href="#">Our Services</a></li>
                             <li><a href="restaurant.html">Restaurant</a></li>
-                            <li><a href="room-details.html">Main Pool</a></li>
-                            <li><a href="room-details-booking.html">Spa</a></li>
+                            <li><a href="#">Main Pool</a></li>
+                            <li><a href="#">Spa</a></li>
                         </ul>
                     </li>
                     <li class="parent"><a href="#0">Promo & Package</a>
                         <ul class="level-2">
                             <li class="back"><a href="#0">Back</a></li>
-                            <li><a href="room-list-1.html">Promo of The Month</a></li>
-                            <li><a href="room-list-2.html">Meeting Package</a></li>
-                            <li><a href="room-list-3.html">Romantic Package</a></li>
-                            <li><a href="room-details.html">Wedding Package</a></li>
-                            <li><a href="room-details-booking.html">Sea Activity</a></li>
-                            <li><a href="room-details-booking.html">Stay & Tour Package</a></li>
+                            <li><a href="#">Promo of The Month</a></li>
+                            <li><a href="#">Meeting Package</a></li>
+                            <li><a href="#">Romantic Package</a></li>
+                            <li><a href="#">Wedding Package</a></li>
+                            <li><a href="#">Sea Activity</a></li>
+                            <li><a href="#">Stay & Tour Package</a></li>
                         </ul>
                     </li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="#">Gallery</a></li>
                   <!--  <li><a href="about.html">About</a></li>
                     <li><a href="restaurant.html">Restaurant</a></li>
                     <li><a href="news-1.html">News & events</a></li>
@@ -284,7 +284,7 @@
                         </figure>
                     </a>
                 </div>
-                <p class="text-end"><a href="room-list-2.html" class="btn_1 outline mt-2">View all Rooms</a></p>
+                <p class="text-end"><a href="view_all_villa.html" class="btn_1 outline mt-2">View all Rooms</a></p>
             </div>
             <!-- /row-->
 
