--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="zxx">
 
 <head>
     
@@ -23,8 +23,8 @@
     <link defer async href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- BASE CSS -->
-    <link defer async href="css/bootstrap.min.css" rel="stylesheet">
-    <link defer async href="css/style.css" rel="stylesheet">
+    <link defer  href="css/bootstrap.min.css" rel="stylesheet">
+    <link defer  href="css/style.css" rel="stylesheet">
 	<link defer async href="css/vendors.min.css" rel="stylesheet">
 
     <!-- YOUR CUSTOM CSS -->
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="mouse_wp slide-animated four">
-                    <a href="#first_section" class="btn_scrollto">
+                    <a href="index.html" class="btn_scrollto">
                         <div class="mouse"></div>
                     </a>
                 </div>
@@ -567,24 +567,24 @@
         <div class="container">
             <div class="row move_content">
                 <div class="col-lg-4 col-md-12">
-                    <h5>Contacts</h5>
+                    <h3>Contacts</h3>
                     <ul>
                         <li>Jl.Trikora 3 Malang Rapat<br>Bintan - Kepri<br><br></li>
-                        <li><strong><a href="#0">info@Oneofakindbintan.com</a></strong></li>
+                        <li><strong><a href="info@oneofakindresortbintan.com">info@Oneofakindbintan.com</a></strong></li>
                         <li><strong><a href="whatsapp://send?text= Hello, I'm &phone=+6282313099999" class="_blank">+62 823 1309 9999</a></strong></li>
                     </ul>
                     <div class="social">
                         <ul>
-                            <li><a href="#0"><i class="bi bi-instagram"></i></a></li>
-                            <li><a href="#0"><i class="bi bi-youtube"></i></a></li>
-                            <li><a href="#0"><i class="bi bi-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/oneofakindbintan/"><i class="bi bi-instagram"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCrsQdDEG8810BHA7PSs9Spw"><i class="bi bi-youtube"></i></a></li>
+                            <li><a href="https://www.facebook.com/oneofakindresortbintan"><i class="bi bi-facebook"></i></a></li>
                             <li><a href="#0"><i class="bi bi-twitter-x"></i></a></li>
-                            <li><a href="#0"><i class="bi bi-tiktok"></i></a></li>
+                            <li><a href="https://www.tiktok.com/@oneofakindbintan"><i class="bi bi-tiktok"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 ms-lg-auto">
-                    <h5>Explore</h5>
+                    <h3>Explore</h3>
                     <div class="footer_links">
                         <ul>
                             <li><a href="index.html">Home</a></li>
