--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="wrapper opacity-mask d-flex align-items-center justify-content-center text-center animate_hero" data-opacity-mask="rgba(0, 0, 0, 0.5)">
                 <div class="container">
                     <small class="slide-animated one">Luxury Resort Experience</small>
-                    <h3 class="slide-animated two">A unique Experience<br>where to stay</h3>
+                    <h3>A unique Experience<br>where to stay</h3>
                     <small > Website Under Maintanance</small>
                     <div class="row justify-content-center slide-animated three">
                         <div class="col-xl-10">
